# tplab-deploy-bot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
tests/: test_tp_deploy_bot.py
tp_deploy_bot/: __main__.py  config.py  utils.py
